[gd_scene load_steps=3 format=3 uid="uid://bho8o6h3xki8f"]

[ext_resource type="Script" uid="uid://byq0idcnqleod" path="res://addons/ExtraUIControls/calendar_date_picker.gd" id="1_b6lkv"]
[ext_resource type="PackedScene" uid="uid://0irbv5jkmaof" path="res://addons/ExtraUIControls/spin_box_extra.tscn" id="2_enomm"]

[node name="CalendarDatePicker" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6lkv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MonthYearHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="PrevMonthButton" type="Button" parent="MarginContainer/VBoxContainer/MonthYearHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<"

[node name="MonthYearLabel" type="Button" parent="MarginContainer/VBoxContainer/MonthYearHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NextMonthButton" type="Button" parent="MarginContainer/VBoxContainer/MonthYearHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ">"

[node name="DayButtonsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 7

[node name="TodayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Today"

[node name="YearsSpinBox" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_enomm")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(67, 99)
layout_mode = 2
font_size = 40
looping = false
show_buttons = false

[node name="confirm_year_button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Select"
